--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -353,58 +353,16 @@ print(odds_ratio)
 
 - [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
-### Continuation of their story
 
-[Study design I](study-design-1.qmd)
+### エピソード、用語集、Rスクリプト
 
-[Study design II](study-design-2.qmd)
+- [Silent Confusions Hidden in Percentages](effects-1.qmd)
+- [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.qmd)
+- [Collapsibility of Effect Measures in Marginal and Stratified Tables](effects-3.qmd)
+- [Risk Ratios and Odds Ratios: When Approximation Works](effects-4.qmd)
+- [From Risk and Rate to Survival and Hazard](effects-5.qmd)
+- [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example](effects-6.qmd)
 
-[Study design III](study-design-3.qmd)
+- [Statistical Terms in Plain Language](glossary.html)
 
-[Study design IV](study-design-4.qmd)
-
-[Study design V](study-design-5.qmd)
-
-[Frequentist thinking I](frequentist-1.qmd)
-
-[Frequentist thinking II](frequentist-2.qmd)
-
-[Frequentist thinking III](frequentist-3.qmd)
-
-[Frequentist thinking IV](frequentist-4.qmd)
-
-[Frequentist thinking V](frequentist-5.qmd)
-
-[Effects and time I](effects-1.qmd)
-
-[Effects and time II](effects-2.qmd)
-
-[Effects and time III](effects-3.qmd)
-
-[Effects and time IV](effects-4.qmd)
-
-[Effects and time V](effects-5.qmd)
-
-[Adjusting for bias I](logistic-regression-1.qmd)
-
-[Adjusting for bias II](logistic-regression-2.qmd)
-
-[Adjusting for bias III](logistic-regression-3.qmd)
-
-[Adjusting for bias IV](logistic-regression-4.qmd)
-
-[Causal inference I](causal-inference-1.qmd)
-
-[Causal inference II](causal-inference-2.qmd)
-
-[Causal inference III](causal-inference-3.qmd)
-
-[Causal inference IV](causal-inference-4.qmd)
-
-[The Craft of research I](publish-a-paper-1.qmd)
-
-[The Craft of research II](publish-a-paper-2.qmd)
-
-[The Craft of research III](publish-a-paper-3.qmd)
-
-[The Craft of research IV](publish-a-paper-4.qmd)
+- [frequentist.R](../from-coffee-chat-to-r/effects.R)
