--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -148,7 +148,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Effects and time VI − Distinguishing Time-Point, Time-Constant, and Time-Varying Effects
+# Effects and Time VI − Distinguishing Time-Point, Time-Constant, and Time-Varying Effects
 
 ::: {.serif-block .text-right}
 Keywords: effect measure, survival/competing-risk
@@ -310,4 +310,6 @@ summary(rr_at_20)
 - Mok TS, Wu YL, Thongprasert S, Yang CH, Chu DT, Saijo N, Sunpaweravong P, Han B, Margono B, Ichinose Y, Nishiwaki Y, Ohe Y, Yang JJ, Chewaskulyong B, Jiang H, Duffield EL, Watkins CL, Armour AA, Fukuoka M. Gefitinib or carboplatin-paclitaxel in pulmonary adenocarcinoma. N Engl J Med 2009;361(10):947-57
 
 :::::::::::::::::::::::::::::::::
-### End of the episode on Effects and time
+
+### This concludes the Effects and Time series. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
+
