--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -148,7 +148,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Adjusting for bias IV − Why My Logistic Regression Calculation Went Wrong
+# Adjusting for Bias IV − Why My Logistic Regression Calculation Went Wrong
 
 ::: {.serif-block .text-right}
 Keywords: binary outcome, effect measure, generalized linear model
@@ -288,12 +288,14 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 
 - [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
-### エピソードとRスクリプト
+### エピソード、用語集、Rスクリプト
 
-- [From 2×2 Tables to Logistic Regression](logistic-regression-1.qmd)
-- [How to Read Logistic Regression Coefficients](logistic-regression-2.qmd)
+- [From Risk to Logistic Regression](logistic-regression-1.qmd)
+- [The Logit Function](logistic-regression-2.qmd)
 - [Pitfalls of Logistic Regression with Small Samples](logistic-regression-3.qmd)
 - [Why My Logistic Regression Calculation Went Wrong](logistic-regression-4.qmd)
 - [Simpson's paradox](logistic-regression-5.qmd)
+
+- [Statistical Terms in Plain Language](glossary.html)
 
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
