--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -193,7 +193,7 @@ Keywords: binary outcome, effect measure, observational study, scientific writin
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple"  title="寄与割合とその関連指標1. 集団寄与割合"}
-疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction/excess fraction）という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団をターゲットとするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
+疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために**寄与割合（attributable fraction/excess fraction）**という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団を**ターゲット**とするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
 
 あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、集団寄与割合（population attributable fraction）と呼ばれています。ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
 
