--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -200,7 +200,7 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="層別した指標の併合可能性"}
+::: {.callout-note appearance="simple" title="層別した指標の併合可能性"}
 表1と表2は、がん患者100人のランダム化臨床試験を想定して作った数値例です。表1では100人全体における死亡リスクを、表2はステージIIIの50人とステージIVの50人に層別した死亡リスクを示しています。
 
 まず、抗がん剤投与群の死亡リスクをみてください。ステージIIIでは死亡リスクは20%と低く、ステージIVでは40%と高いことがわかります。そして全体の死亡リスクは、ステージIIIとステージIVの平均（30%）です。このように、リスクには、層別する前の値が、層別した後の平均になるという性質があります。
@@ -291,7 +291,7 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="glm()を用いたリスク差、リスク比、オッズ比の計算"}
+::: {.callout-note appearance="simple" title="glm()を用いたリスク差、リスク比、オッズ比の計算"}
 
 リスク差、リスク比、オッズ比はいろいろな手段で計算できますが、汎用性が高いのは一般化線型モデル（glm関数）を用いる方法です。リンク関数を選ぶことで、リスク差（link="identity"）、リスク比（link="log"）、オッズ比（link="logit"）を選択することができ、交絡因子の調整もしやすいのが便利なところです。ただし、リスク比とオッズ比では、回帰係数の指数をとるひと手間が必要です。表1のリスク差、リスク比、オッズ比を再現するコードを示しておきますので、参考まで。
 
@@ -332,8 +332,7 @@ print(odds_ratio)
 ```
 :::
 
-
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 一般化線型モデルの一種であるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます（田中2022）。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
 
@@ -341,7 +340,7 @@ print(odds_ratio)
 2.  ロジスティック回帰を用いてリスク比を計算できない
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は1です**
 
 ロジスティック回帰の共変量に、数値を代入することで、確率を計算することができます。共変量として、2群（たとえば抗がん剤投与群と緩和療法群）を指定すれば、それぞれの群の確率が求まりますよね。その比をとれば、リスク比が計算できます。
