--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -150,71 +150,74 @@ a:hover {
 
 -   前回までのあらすじ
 
-    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。統計的に調整や層別を行ったときと、行わないときで、オッズ比の値が異なることがあると父に教わるが、いまひとつ腑に落ちないのだった。
+    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。統計的に調整や層別を行ったときと、行わないときで、オッズ比の値が異なることがあると父に教わるが、娘はいまひとつ腑に落ちないのだった。
 
-**私「この前、コーヒーと膵がんの話をしてくれて、ロジスティック回帰で調整するってのが、どういう操作なのかわかったよ。でも、問題は、喫煙を調整するのが正しいかどうかってことじゃない？違う結果が出たってだけじゃ、その説明にならないよね」**
 
-お父さん「その通り。データだけでは、調整前後のどちらの結果が正しいのかはわからない。でも、膵がんの例では、喫煙は癌のリスク因子っていう医学の常識があるよね。こういった事前知識が、調整すべきかどうかの判断材料になる。リスク因子だってわかっているなら、疾患にかかる確率をモデル化するとき、考慮すべきだからね」
 
-**私「なるほど。そういう説明なら、まずまず納得できるかも」**
+私「この前、コーヒーと膵がんの話をしてくれて、ロジスティック回帰で"調整する"っていう操作がどういうことかはわかったよ。**回帰モデル**と**因果モデル**の違いも納得した。でもさ、問題は"喫煙"を調整するのが正しいかどうかなんじゃない？値が変わったってだけじゃ、説明としては足りない気がするし、Rubin因果モデルでその説明はなかった」
 
-お父さん「因果推論っていう学問ではこんな風に説明される。いま、3つの変数があるでしょ。その場合の変数間の因果関係を矢印で表すとき、3パターンあると思わない？この図のように。Eは曝露変数（exposure）、Dはアウトカム（disease）を表していて、E→Dは両者が原因と結果の関係にあるって意味だよ。Cは第3の因子のこと」
+お父さん「その通り。前にいったようにデータだけからは、調整前と調整後のどちらが"正しい"かは決められない。でも膵がんの例だと、喫煙は癌のリスク因子だっていう医学的な常識があるよね。こういう事前知識が、調整すべきか交絡因子を選ぶときの判断材料になる。リスク因子だとわかっているなら、疾患にかかる確率をモデル化するときに考慮しておきたい、という発想だね」
+
+私「なるほど。その説明なら、まずまず納得できるかも」
+
+### グラフで考える
+
+お父さん「因果推論の分野では、Rubin因果モデルとは別の枠組みでこう整理する。今、変数が3つあるでしょ。その場合の変数間の因果関係を矢印で表すとき、3パターンあると思わない？この図のように。Eは曝露変数（exposure）、Dはアウトカム（disease）を表していて、E→Dは両者が原因と結果の関係にあるって意味だよ。Cは第3の因子のこと」
 
 ![](causal-inference-1-1.png)
 
-**私「この3つは、第3の因子の周りの矢印の向きが違うってことね。確かに、E←C→DとE→C→DとE→C←Dの3パターンで網羅できてるのかな。E←C←Dみたいに、結果から原因に矢印がさかのぼるのは変だもの」**
+**私「この3つは、Cの周りの矢印の向きが違うわけね。確かに、E←C→DとE→C→DとE→C←Dの3パターンで一通りカバーできてるのかな。E←C←Dみたいに、結果から原因に矢印がさかのぼるのは変だし」**
 
-お父さん「そうだね。その場合、Eが原因、Dが結果だとすると、矢印が循環しちゃうから、考えないことが多い。このような図は、非循環有向グラフ（DAG）と呼ばれている。この3パターンにおけるCには、それぞれ名前がついていて、上から共通原因（common cause）、中間媒介因子（intermediator）、合流点（collider）っていう」
+お父さん「そうだね。その場合、Eが原因、Dが結果だとすると、矢印がぐるっと循環する図は、ふつうは除外する。こういう図は、**非循環有向グラフ（DAG）**と呼ばれていて、図のCには、それぞれ別の名前と役割を持っているんだ」
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **第3の因子の分類**
+-   共通原因 （common cause）: E←C→DにおけるCのように、曝露変数とアウトカムの両方に向けた矢印を持つ因子
+-   中間媒介因子 （intermediator）: E→C→DにおけるCのように、曝露変数からアウトカムに入る矢印の途中にある因子
+-   合流点 （collider）: E→C←DにおけるCのように、曝露変数とアウトカムからの矢印が合流する因子
 
--   共通原因 （common cause） E←C→DにおけるCのように、曝露変数とアウトカムの両方に向けた矢印を持つ因子
--   中間媒介因子 （intermediator） E→C→DにおけるCのように、曝露変数からアウトカムに入る矢印の途中にある因子
--   合流点 （collider） E→C←DにおけるCのように、曝露変数とアウトカムからの矢印が合流する因子
-:::
+お父さん「なにか"がんのリスク因子"をひとつ思い浮かべてみて。それは3パターンのうちどれに当てはまりそう？」
 
-お父さん「なにか癌のリスク因子をひとつ想像してみて。そしてそれは3パターンのうちどれに相当する？」
+**私「えっと、ピロリ菌とか、喫煙とか？どっちも発がんリスクを上げるんだから、共通原因か、中間媒介因子のどっちかかな。リスク因子ってことは、D（がん）の向きの矢印を持っているよね」**
 
-**私「えっと、ピロリ菌とか、喫煙とか？共通原因か、中間媒介因子のどっちかかな。リスク因子ってことは、矢印がD（癌）の向きじゃないとおかしいもの」**
+お父さん「その通り。さらに中間媒介因子について考えてみてよ。中間媒介因子って、**曝露がアウトカムに影響する効果の一部**を担っているよね。たとえば喫煙によってニコチンに曝露されるけど、ニコチンは"たばこを吸った結果"生じる因子であると同時に、がんの直接のリスク因子でもある。だから、"喫煙の総合的な効果"を推定したいときに、ロジスティック回帰でニコチンを調整するのはおかしいってことになる。ニコチンは効果の一部そのものだから。この理屈でいくと、3パターンのうち、**調整すべきなのは共通原因だけ**という理屈になる」
 
-お父さん「そう。さらに中間媒介因子の意味について考えてみてよ。中間媒介因子って、曝露が疾患に影響する効果の一部じゃない？たとえば、喫煙によってニコチンに曝露してしまうけど、それはたばこを吸った結果生じる因子でもあり、癌の直接のリスク因子でもあるよね。だから、曝露効果を推定したいとき、中間媒介因子（ニコチン）をロジスティック回帰で調整するのはおかしい。つまり3パターンのうち調整すべきなのは、共通原因だけって理屈になる」
 
-**私「ふーん。まあ因果関係がパターン分けできそうっていうのは理解可能だけどね。第3の因子なんて無数にあるよね。思考停止で、全部調整したらいいじゃん」**
+**私「へー。まあパターン分けできそうなのはわかるけど、第3の因子なんて無数にあるよね。思考停止で、全部調整したらいいじゃんって気もするけど」**
 
-お父さん「実際にデータを解析するときにはそうはいかない。データに限りがあるからね。そうだ、ストーマ造設と復職率の調査を考えてみようよ。Eはストーマ造設、Dは復職だよね。たとえば、結腸がんと直腸がんで復職率は違うと思う？」
+お父さん「実際にデータを解析するときにはそうはいかない。データに限りがあるし、推定も不安定になるからね。じゃあ次に、ストーマ造設と復職率の調査を考えてみようよ。Eはストーマ造設、Dは復職だよね。たとえば、結腸がんと直腸がんで復職率は違うと思う？」
 
 **私「わかんないな。あんまり違わないのかもしれない」**
 
-お父さん「仮にがん種の違いは復職率と直接の因果関係がないとするでしょ。そして、結腸がんだとあまりストーマを増設しないんだっけ？そうすると、C→Eの関係はあるけど、C→Dの関係はないってことになる。そうするとがん種は共通原因じゃないから、調整しなくてもいいってことになる」
+お父さん「仮にがん種の違いは、復職率に直接効いてこないとするでしょ。そして、結腸がんだとあまりストーマを増設しないとしたらどうだろう。C→Eの関係はあるけど、C→Dの関係はないってことになる。このDAGによるとがん種は共通原因じゃないから、調整しなくてもいいってことになる」
 
-**私「その理屈が正しいならそうね」**
+**私「なるほど、その仮定が正しいならそうね」**
 
-お父さん「以前みせてもらった集計では、ストーマ保有者は、非保有者に比べて、平均年齢が低くて、女性が多いんだっけ」
+お父さん「以前みせてもらった集計では、ストーマ保有者は、非保有者に比べて、平均年齢が低くて、女性が多かった」
 
 **私「そうだよ」**
 
-お父さん「きっと、60歳を超えると定年の方が多くなるだろうし、男性の方が復職を希望しているんじゃない？そうだとすると、年齢・性別は、ストーマ造設と復職率の両方に関連していて、共通原因と考えてよさそうだよね。だから年齢・性別はロジスティック回帰で調整すべきなんだけど、あのときはデータが足りなかった。つまり、実際の解析では、調整しないといけない変数を絞っていかないとうまくいかない」
+お父さん「きっと、60歳を超えると定年の方が多くなるだろうし、男性の方が復職を希望しているんじゃない？こう考えると、年齢・性別は、ストーマ造設と復職率の両方に関連していて、共通原因と考えてよさそうだよね。だから年齢・性別はロジスティック回帰で調整すべきなんだけど、あのときはデータが足りず、モデルが不安だった。つまり、実際の解析では、調整する変数を絞っていかないとうまくいかない」
 
 **私「ああ、あのときはそういう思考回路だったのね。お父さんがなにを考えていたか理解できた気がする」**
 
-お父さん「この考え方はランダム化臨床試験でも同じだよ。JCOG9912っていう臨床試験の論文を読んだことがあったよね（Sasako, et al. 2006）。あれは、手術方法（TH群またはLTA群）を比較して全生存期間に差があるかを調べた研究だけど、その場合に第3の因子ってあると思う？」
+## ランダム化臨床試験の第3の因子はどうする？
 
-**私「ないんじゃない？だってTH群とLTA群をランダムに割付けてるもの」**
+お父さん「この考え方はランダム化臨床試験でも応用できる。JCOG9912っていう臨床試験の論文を読んだことがあったよね（Sasako, et al. 2006）。あれは、手術方法（TH群またはLTA群）を比較して全生存期間に差があるかを調べた研究だった」
+
+**私「うん。だけど、ランダム化しているから第3の因子ってないんじゃない？だってTH群とLTA群をランダムに割付けてるもの」**
 
 お父さん「正解。でも、この試験ではハザード比を求めるとき、腫瘍径やBorrman分類などがんの進行度を表す変数で調整している。使ったのはロジスティック回帰じゃなくてCox回帰だけどね。」
 
-**私「そうなのか。じゃあ調整した方がいいのかな、これまでの教えてくれたことと矛盾するけど。お父さん、さっきの図を使って説明できる？」**
+**私「そうなのか。じゃあ調整した方がいいのかな、さっきの"共通原因だけ調整"の話と矛盾するけど」**
 
-お父さん「Eを手術方法、Dを全生存期間、Cを腫瘍径とすると、こんな図が描ける。試験結果では有意な関連はなかったけど、わかりやすいようにE→Dの矢印は残したよ」
+お父さん「ここでもDAGを使って考えられる。Eを手術方法、Dを全生存期間、Cを腫瘍径とすると、図はこうなる。試験結果では有意な関連はなかったけど、わかりやすいようにE→Dの矢印は残したよ」
 
 ![](causal-inference-1-2.png)
 
-**私「やっぱり共通原因じゃないじゃない」**
+**私「やっぱり共通原因ではないね」**
 
-お父さん「その通り。JCOG9912では、腫瘍径を調整する必要はなかった。でも、Cox回帰によって全生存期間をモデル化するとしたらどうかな。腫瘍径のような癌の進行度をモデルに入れたくならない？」
+お父さん「そう。JCOG9912では、腫瘍径は交絡因子ではないから、調整する必要はなかった。でも、Cox回帰によって全生存期間をモデル化するとしたらどうかな。腫瘍径のような癌の進行度をモデルに入れたくならない？」
 
-**私「もちろん。腫瘍径だけじゃなくてリンパ節転移とか、残存腫瘍の有無とかもモデル化したくなる」**
+**私「それは入れたくなる。腫瘍径だけじゃなくてリンパ節転移とか、残存腫瘍の有無とかもモデル化したくなる」**
 
 お父さん「この図の場合、Cは交絡因子じゃないから、調整しなくてもバイアスは生じない。でも、真に近いモデルを当てはめて、ハザード比の推定精度を高めるという観点からは、Cを調整してもいいんだ」
 
