--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Effects and Time VI − Distinguishing Time-Point, Time-Constant, and Time-Varying Effects
 
 ::: {.serif-block .text-right}
-Keywords: effect measure, survival/competing-risk
+Keywords: effect measure, simulation, survival/competing-risk
 :::
 
 ------------------------------------------------------------------------
@@ -183,15 +183,23 @@ $$
 :::
 
 ::: voice-father
-お父さん「ああ、文脈がないとそう読むのが普通かもね。指数分布の式の方はね、ハザードが$x$に依存しないでしょ。つまりハザード自体がもともと一定なんだ。この式以前にね。下の***Cox回帰（Cox regression）**をみると、$\lambda_1(x)$と$\lambda_2(x)$は時間$x$の関数なんだけど、この式はハザード比だけが一定っていうある種の制約を表している。つまりこの式が出た時点で、はじめて**比例ハザード性**が仮定されたというか、構造が決まったっていう文脈でとらえてほしいんだ」
+お父さん「ああ、文脈がないとそう読むのが普通かもね。指数分布の式の方はね、ハザードが$x$に依存しないでしょ、この式以前に。つまりハザード自体がもともと一定なんだ。下の**Cox回帰（Cox regression）**をみると、$\lambda_1(x)$と$\lambda_2(x)$は時間$x$の関数なんだけど、この式はハザード比だけが一定っていうある種の制約を表している」
 :::
 
 ::: voice-daughter
-私「やっぱり違うのか。Cox回帰の式は、ロジスティック回帰に比べてシンプルすぎて不安になるな。でも比例ハザード性は聞いたことがあって安心する」
+私「つまり？」
 :::
 
 ::: voice-father
-お父さん「この式は本質的なところしか書いてないからね。Cox回帰のよさはいくつもあるけど、実用面では$\lambda_1(x)$と$\lambda_2(x)$はどんな関数でもいいってことなんだ。指数分布はハザードが定数だから、ずっと融通が利かない。データへの当てはまりが悪いんだ」
+お父さん「つまりこの式が出た時点で、はじめて**比例ハザード性**が仮定された、あるいは構造が決まったっていうような文脈でとらえてほしいんだ」
+:::
+
+::: voice-daughter
+私「やっぱり違うのか。Cox回帰の式は、ロジスティック回帰に比べてシンプルすぎて見てて不安になるな。比例ハザード性っていう聞き覚えのある単語で説明されてやっと安心する」
+:::
+
+::: voice-father
+お父さん「この式は本質的なところしか書いてないからね。Cox回帰のよさはいくつもあるけど、$\lambda_1(x)$と$\lambda_2(x)$はどんな関数でもいいという点が、とても実用的なんだ。指数分布はハザードが定数だから、ずっと融通が利かない。データへの当てはまりが悪いんだ」
 :::
 
 ::: voice-daughter
