--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Effects and Time IV − Risk Ratios and Odds Ratios: When Approximation Works
 
 ::: {.serif-block .text-right}
-Keywords: binary outcome, effect measure, scientific writing
+Keywords: binary outcome, effect measure
 :::
 
 ------------------------------------------------------------------------
