--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -348,11 +348,11 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 
 ### エピソード、用語集、Rスクリプト
 
-- [From Risk to Logistic Regression](logistic-regression-1.qmd)
-- [The Logit Function](logistic-regression-2.qmd)
-- [Pitfalls of Logistic Regression with Small Samples](logistic-regression-3.qmd)
-- [Why My Logistic Regression Calculation Went Wrong](logistic-regression-4.qmd)
-- [Simpson's paradox](logistic-regression-5.qmd)
+- [From Risk to Logistic Regression](logistic-regression-1.html)
+- [The Logit Function](logistic-regression-2.html)
+- [Pitfalls of Logistic Regression with Small Samples](logistic-regression-3.html)
+- [Why My Logistic Regression Calculation Went Wrong](logistic-regression-4.html)
+- [Simpson's paradox](logistic-regression-5.html)
 
 - [Statistical Terms in Plain Language](glossary.html)
 
