--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -290,11 +290,11 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 
 ### エピソード、用語集、Rスクリプト
 
-- [From Risk to Logistic Regression](logistic-regression-1.qmd)
-- [The Logit Function](logistic-regression-2.qmd)
-- [Pitfalls of Logistic Regression with Small Samples](logistic-regression-3.qmd)
-- [Why My Logistic Regression Calculation Went Wrong](logistic-regression-4.qmd)
-- [Simpson's paradox](logistic-regression-5.qmd)
+- [From Risk to Logistic Regression](logistic-regression-1.html)
+- [The Logit Function](logistic-regression-2.html)
+- [Pitfalls of Logistic Regression with Small Samples](logistic-regression-3.html)
+- [Why My Logistic Regression Calculation Went Wrong](logistic-regression-4.html)
+- [Simpson's paradox](logistic-regression-5.html)
 
 - [Statistical Terms in Plain Language](glossary.html)
 
