--- a/jp/publish-a-paper-1.qmd
+++ b/jp/publish-a-paper-1.qmd
@@ -150,15 +150,20 @@ a:hover {
 
 -   前回までのあらすじ
 
-    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。調査は終ったが、いざ論文を書くとなると腰が重く、パソコンを閉じて父に話しかけるのだった。
+    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。調査は終ったが、いざ論文を書くとなると腰が重くなり、パソコンを閉じて父に話しかけるのだった。
 
-**私「がんサバイバー調査についてなんだけどね。調査結果がまとまったから、論文を書かなきゃって思ってるんだけど。お父さんって、どこかのジャーナルで統計エディターしてたよね。論文って、どんな感じで書くと、採択されやすいのかな」**
+**私「がんサバイバー調査についてなんだけどね。調査結果がまとまったから、論文を書かなきゃって思ってるんだけど...。お父さんって、どこかのジャーナルで統計エディターしてたよね？論文って、どんな感じで書くと採択されやすいのかな」**
 
-お父さん「どんな感じねえ。医学が専門ってわけじゃないから、いいにくいな。自分自身はどう思うの？」
+お父さん「どんな感じねえ。医学が専門ってわけじゃないから話しにくいな。自分ではどう思ってる？」
 
-**私「はやってる研究テーマを扱ったものは通りやすそう。免疫チェックポイント阻害薬みたいな新薬とか、新しい診断基準とか？あ、ランダム化臨床試験は、調査より注目されるし、きっと有利ね」**
+**私「はやってる研究テーマは通りやすそう。免疫チェックポイント阻害薬みたいな新薬とか、新しい診断基準とか。あ、ランダム化臨床試験は、調査より注目されるし、きっと有利ね」**
 
-お父さん「そのイメージはまずまずあってるかな。エディターをやってて感じるのは、採択するときの基準は、突き詰めて考えると2つしかない。第一に、その研究から得られた結論の価値（value）は高いか。第二に、結論は正しい方法論（methodology）で導かれているか。ランダム化臨床試験が正しい方法っていってるわけじゃないよ。エディターやレビュワーは、臨床試験でも、観察研究でも、それぞれの分野で妥当とみなされているような方法論に従って行われているかを、チェックしてるってこと」
+お父さん「そのイメージはまずまずあってると思うよ。エディターをやってて感じるのはね、採択するときの基準は、突き詰めると2つしかない」
+
+- その研究から得られた**結論の価値（value）**は高いか
+- 結論は**妥当な方法論（methodology）**で導かれているか
+
+お父さん「ランダム化臨床試験が絶対に正しい方法っていってるわけじゃないよ。臨床試験でも、観察研究でも、それぞれの分野で認められている方法論に従って行われているかを、*エディター*や*レビュワー*はチェックしてるんだ」
 
 **私「あれ？エディターとレビュワーって違う人？」**
 
@@ -170,19 +175,28 @@ a:hover {
 
 **私「ふーん。カバーレターって大切？」**
 
-お父さん「どうだろう。お父さんは割とカバーレターで研究の価値をアピールする方だけど、定型文でいいっていう人もいる。周りの研究者に聞いても、どれくらい重視するかはまちまち。読まないエディターもいるのも事実」
+お父さん「どうだろうね。お父さんは、カバーレターで研究の価値をアピールする方だけど、定型文で十分っていう人もいる。周りの研究者に聞いても、どれくらい重視するかはまちまち。ろくに読まないエディターもいるのは事実」
 
-**私「そういうもんか。ピアレビューがなにかはどこかで聞いたことあるよ。ジャーナルからコメントがきて、著者がそれに回答するんだよね。でも、裏ではエディターじゃなくてレビュワーが採点してるんだ」**
+**私「そういうもんか。ピアレビューが何かはどこかで聞いたことあるよ。ジャーナルからコメントがきて、著者がそれに回答するんだよね。でも、裏側では、エディターじゃなくてレビュワーが採点してるんだ」**
 
-お父さん「ジャーナルによって、多段階評価だったり数字をつけたりするけどね。エディターが採点結果とコメントをみて、採択（accept）、大修正（major revision）、小修正（minor revision）、不採択（reject）のどれか決める。ピアレビューを経ないと、論文が粗製乱造されてしまう。だから、研究者はみんなピアレビューという仕組みを大切にしている」
+お父さん「ジャーナルによって、多段階評価だったり数字をつけたりするけどね。エディターがレビュワーから集めた採点結果とコメントをとりまとめて、著者にどういう意思決定になったかを伝える」
+
+- 採択（accept）
+- 大修正（major revision）
+- 小修正（minor revision）
+- 不採択（reject）
+
+お父さん「ピアレビューを経ないと、論文が粗製乱造されてしまう。だから、研究者はみんなピアレビューという仕組みを大切にしている」
 
 **私「ちなみにお父さんお金もらってる？」**
 
-お父さん「いや？ボランティア。利益相反とかいわれるとややこしいから、むしろどこからもお金を受け取りたくない。2019年にレビュワーの利益相反が問題になったことがあってね。それ以来、そのジャーナル（BMJ）は、査読コメントや著者の回答をサイトで公開するようになった。ピアレビューのプロセスが知りたければ、そのサイトをみてみたらいいよ。論文投稿するときは、論文を書くだけじゃなくて、英語でやり取りしなきゃいけないことが意外と多いから、参考になるかもしれない」
+お父さん「いや？ボランティア。利益相反とかいわれるとややこしいから、むしろどこからもお金を受け取りたくない。2019年にレビュワーの利益相反が問題になったことがあってね。それ以来、そのジャーナル（BMJ）は、査読コメントや著者の回答をサイトで公開するようになった。ピアレビューのプロセスが知りたければ、そのサイトをみてみたらいいよ。論文投稿するときは、論文を書くだけじゃなくて、英語でやり取りしなきゃいけないことが案外多いから、参考になるかもしれない」
 
-**私「ふむふむ。話を元に戻すとさ。採択される基準は、価値と方法論っていってたよね。具体的にはどうすればいいの？」**
+### 価値と方法論
 
-お父さん「エディターはたくさんの論文をさばかなきゃいけないから、ざっとタイトルと抄録だけ目を通すことが多い。だから、どのあたりに研究の価値があるか、方法論は正しいか、といったことを抄録でアピールしたいよね」
+**私「ふむふむ。話を戻すとさ。採択される基準は、価値と方法論っていってたよね。具体的にはどうすればいいの？」**
+
+お父さん「エディターはたくさんの論文をさばかなきゃいけないから、ざっとタイトルと抄録だけ目を通すことが多い」
 
 **私「ふむふむ」**
 
@@ -198,9 +212,9 @@ a:hover {
 
 **私「JAMAの抄録はこうなのね。研究の価値は、”Importance”と”Conclusions and relevance”に書けばいい。研究方法も、どんな要素が求められるか、デザインから測定方法まで指定されてる。確かにわかりやすい。参加者、曝露、主要アウトカムは、PECOの通りに書けばいいよね」**
 
-お父さん「それでいいと思う。がんサバイバーの調査の価値はなにって聞かれたらなんて答える？」
+お父さん「それでいいと思う。がんサバイバーの調査の"価値"はなにって聞かれたらなんて答える？」
 
-**私「まず、がん手術後に仕事に就けるかどうかは、生活に関わる大きな問題だっていうのが前提かな。そして、どんな患者が苦労していて、就労支援を求めているのかを調べて、ストーマ造設が関連することがわかったっていうのが、研究をやった意義なんだと思うけど」**
+**私「まず、がん手術後に仕事に就けるかどうかは、生活に関わる大きな問題だっていうのが前提かな。その上で、どんな患者が苦労していて、就労支援を求めているのかを調べて、ストーマ造設が関連することがわかった。それが研究をやった意義だと思う」**
 
 お父さん「うんうん。それが抄録を読んだ人に伝わるように書こう。たとえばこんな感じでどうだろう」
 
@@ -209,18 +223,18 @@ a:hover {
 -   **Design, setting and participants**: A mail survey was conducted at 3 hospitals in Japan. Participants were 20-to-80-year-old patients with clinical stage I–III rectal cancer who were employed at diagnosis and received curative surgery from 2010 to 2020. Participants were followed up using self-administered questionnaires for 12 months.
 -   **Exposures**: Stoma creation
 -   **Main outcomes and measures**: Return-to-work at 12 months after surgery
--   **Results**: AAA patients were responded and the response rate was BB%. The median time to return-to-work was CC months and the proportion of working patients at 12 months after surgery was DD%. The odds ratio for delayed return-to-work was EEE (95% confidence interval FFF to GGG, p=HHH) after adjustment for age, sex and income.
--   **Conclusions and relevance**: Stoma creation in rectal cancer is associated with a difficulty in return-to-work. Further support for employment is necessary.
+-   **Results**: Responses were obtained from AAA patients and the response rate was BB%. The median time to return-to-work was CC months and the proportion of working patients at 12 months after surgery was DD%. The odds ratio for delayed return-to-work was EEE (95% confidence interval FFF to GGG, p = HHH) after adjustment for age, sex and income.  
+-   **Conclusions and relevance**: Stoma creation in rectal cancer is associated with difficulty in returning to work. Further employment support may be necessary.
 
-お父さん「この文章で工夫した点は4つある。まず、今回みたいに日本で調査を行う場合、海外の研究者は日本の事情を知らないでしょ。どんな方法で参加者が選ばれたのか気にされることが多い。だから、参加者についてきちんと説明するといい。単に直腸がん患者って書くんじゃなくて”patients with clinical stage I–III rectal cancer who were employed at the time of diagnosis and received curative surgery from 20XX to 20YY”とかね」
+お父さん「この文章で工夫した点は4つある。まず、今回みたいに日本で調査を行う場合、海外の研究者は日本の事情を知らないでしょ。だから**どんな方法で参加者が選ばれた**をきちんと書く。単に直腸がん患者って書くんじゃなくて”patients with clinical stage I–III rectal cancer who were employed at the time of diagnosis and received curative surgery from 20XX to 20YY”とかね」
 
 **私「ふんふん」**
 
-お父さん「2つ目の工夫は、回答率（response rate）を示すこと。回答率が低いと、選択バイアスがあるかもしれないからね」
+お父さん「2つ目の工夫は、**回答率（response rate）**を示すこと。回答率が低いと、**選択バイアス**があるかもしれないからね」
 
 **私「その次はなに？」**
 
-お父さん「交絡因子を調整しなさいっていったでしょ。この点は、観察研究の査読では必ず確認される。本文に書いてあればいいことなんだけど、抄録でも、オッズ比を示すときに”after adjustment for age, sex and income”のような説明があると、気が利いてるって思ってもらえるかもしれない」
+お父さん「3つ目はさっき話した**交絡調整**だね。観察研究の査読では必ず確認されるポイントになってる。本文に書いてあれば十分だけど、抄録でも、オッズ比を示すときに”after adjustment for age, sex and income”のような説明があると、ちゃんとしてるなって思ってもらえるかもしれない」
 
 **私「なるほどね。2つ目と3つ目は、バイアスがどれくらいあるかについて書いたんだね。最後のひとつは？」**
 
@@ -228,7 +242,7 @@ a:hover {
 
 **私「じゃあさ、少し話がそれるんだけど、主語と時制について聞いていい？”A mail survey was conducted at 3 hospitals in Japan.”っていう一文があるけど、受動態にするのが普通なの？それに、調査はすでに行われたから、時制は過去形なんだよね。IntroductionとConclusionsは現在形だけど」**
 
-お父さん「論文を書くときは、Weを主語にしない方が、客観的だからいいっていう考え方がある。でも最近は、主語をはっきりさせた方が正確に記述できるといってる人もいる。ぜんぜん別の表現もできて、”Study design was a mail survey at 3 hospitals in Japan”というように、研究方法を説明する文体でも書ける。こうすると情報が増えたわけだから、より正確で、かしこまったニュアンスになる。この場合は、受動態でも能動態でも、不自然ってことはない」
+お父さん「論文を書くときは、Weを主語にしない方が、客観的だからいいっていう考え方がある。でも最近は、主語をはっきりさせたほうが、かえって正確だという意見もある。たとえば別の表現をとって”Study design was a mail survey at 3 hospitals in Japan”というように、研究方法を説明する文体にしてもいい。情報が増えたぶん、より正確で、かしこまったニュアンスになる。この場合は、受動態でも能動態でも、不自然ってことはないよ」
 
 **私「時制については？」**
 
@@ -236,7 +250,7 @@ a:hover {
 
 **私「じゃあ主語と時制はいま教えられた通りで書いてみる」**
 
-お父さん「うんうん。ちなみにね、凝った英語を使う必要はないよ。論文は、“concise”つまり簡潔な表現が好ましいとされる。接続詞や関係代名詞を多用しちゃって、一文が長くなりがちな人もいるけど、最初はそうしない方がいい。短い文章が続いていても変じゃない」
+お父さん「うんうん。ちなみにね、凝った英語を使う必要はないよ。論文は、"concise"つまり簡潔な表現が好ましいとされる。接続詞や関係代名詞を多用しちゃって、一文が長くなりがちな人もいるけど、最初はそうしない方がいい。短い文章が続いていてもぜんぜん変じゃないからね」
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
