--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -1,9 +1,16 @@
 ---
+title: "Three-Variable DAGs: The Smallest Building Blocks of Causal Structure"
 format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -127,101 +134,161 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Causal inference I
-::: serif-block
-　　　　　　　　　　　　　　　　　　　　Keywords: DAG, intermediate factor, confounding/information-bias/selection-bias, covariate selection, clinical trial, observational study
+
+# Causal inference I − Three-Variable DAGs: The Smallest Building Blocks of Causal Structure
+
+::: {.serif-block .text-right}
+Keywords: causal model, clinical trial, confounding/collapsibility, study design, observational study
 :::
 
 ------------------------------------------------------------------------
 
 ### 第3の因子なんて無数にあるよね？
 
--   前回までのあらすじ
+::: {.callout-note appearance="simple"  collapse="true" title="前回までのあらすじ"}
+はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。統計的に調整や層別を行ったときと、行わないときで、オッズ比の値が異なることがあると父に教わるが、娘はいまひとつ腑に落ちないのだった。
+:::
 
-    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。統計的に調整や層別を行ったときと、行わないときで、オッズ比の値が異なることがあると父に教わるが、娘はいまひとつ腑に落ちないのだった。
-
-
-
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
 私「この前、コーヒーと膵がんの話をしてくれて、ロジスティック回帰で"調整する"っていう操作がどういうことかはわかったよ。**回帰モデル**と**因果モデル**の違いも納得した。でもさ、問題は"喫煙"を調整するのが正しいかどうかなんじゃない？値が変わったってだけじゃ、説明としては足りない気がするし、Rubin因果モデルでその説明はなかった」
+:::
 
+::: voice-father
 お父さん「その通り。前にいったようにデータだけからは、調整前と調整後のどちらが"正しい"かは決められない。でも膵がんの例だと、喫煙は癌のリスク因子だっていう医学的な常識があるよね。こういう事前知識が、調整すべきか交絡因子を選ぶときの判断材料になる。リスク因子だとわかっているなら、疾患にかかる確率をモデル化するときに考慮しておきたい、という発想だね」
+:::
 
+::: voice-daughter
 私「なるほど。その説明なら、まずまず納得できるかも」
+:::
 
 ### グラフで考える
 
+::: voice-father
 お父さん「因果推論の分野では、Rubin因果モデルとは別の枠組みでこう整理する。今、変数が3つあるでしょ。その場合の変数間の因果関係を矢印で表すとき、3パターンあると思わない？この図のように。Eは曝露変数（exposure）、Dはアウトカム（disease）を表していて、E→Dは両者が原因と結果の関係にあるって意味だよ。Cは第3の因子のこと」
+:::
 
 ![](causal-inference-1-1.png)
 
-**私「この3つは、Cの周りの矢印の向きが違うわけね。確かに、E←C→DとE→C→DとE→C←Dの3パターンで一通りカバーできてるのかな。E←C←Dみたいに、結果から原因に矢印がさかのぼるのは変だし」**
+::: voice-daughter
+私「この3つは、Cの周りの矢印の向きが違うわけね。確かに、E←C→DとE→C→DとE→C←Dの3パターンで一通りカバーできてるのかな。E←C←Dみたいに、結果から原因に矢印がさかのぼるのは変だし」**
+:::
 
+::: voice-father
 お父さん「そうだね。その場合、Eが原因、Dが結果だとすると、矢印がぐるっと循環する図は、ふつうは除外する。こういう図は、**非循環有向グラフ（DAG）**と呼ばれていて、図のCには、それぞれ別の名前と役割を持っているんだ」
+:::
 
 -   共通原因 （common cause）: E←C→DにおけるCのように、曝露変数とアウトカムの両方に向けた矢印を持つ因子
 -   中間媒介因子 （intermediator）: E→C→DにおけるCのように、曝露変数からアウトカムに入る矢印の途中にある因子
 -   合流点 （collider）: E→C←DにおけるCのように、曝露変数とアウトカムからの矢印が合流する因子
 
+::: voice-father
 お父さん「なにか"がんのリスク因子"をひとつ思い浮かべてみて。それは3パターンのうちどれに当てはまりそう？」
+:::
 
-**私「えっと、ピロリ菌とか、喫煙とか？どっちも発がんリスクを上げるんだから、共通原因か、中間媒介因子のどっちかかな。リスク因子ってことは、D（がん）の向きの矢印を持っているよね」**
+::: voice-daughter
+私「えっと、ピロリ菌とか、喫煙とか？どっちも発がんリスクを上げるんだから、共通原因か、中間媒介因子のどっちかかな。リスク因子ってことは、D（がん）の向きの矢印を持っているよね」
+:::
 
+::: voice-father
 お父さん「その通り。さらに中間媒介因子について考えてみてよ。中間媒介因子って、**曝露がアウトカムに影響する効果の一部**を担っているよね。たとえば喫煙によってニコチンに曝露されるけど、ニコチンは"たばこを吸った結果"生じる因子であると同時に、がんの直接のリスク因子でもある。だから、"喫煙の総合的な効果"を推定したいときに、ロジスティック回帰でニコチンを調整するのはおかしいってことになる。ニコチンは効果の一部そのものだから。この理屈でいくと、3パターンのうち、**調整すべきなのは共通原因だけ**という理屈になる」
+:::
 
+::: voice-daughter
+私「へー。まあパターン分けできそうなのはわかるけど、第3の因子なんて無数にあるよね。思考停止で、全部調整したらいいじゃんって気もするけど」
+:::
 
-**私「へー。まあパターン分けできそうなのはわかるけど、第3の因子なんて無数にあるよね。思考停止で、全部調整したらいいじゃんって気もするけど」**
-
+::: voice-father
 お父さん「実際にデータを解析するときにはそうはいかない。データに限りがあるし、推定も不安定になるからね。じゃあ次に、ストーマ造設と復職率の調査を考えてみようよ。Eはストーマ造設、Dは復職だよね。たとえば、結腸がんと直腸がんで復職率は違うと思う？」
+:::
 
-**私「わかんないな。あんまり違わないのかもしれない」**
+::: voice-daughter
+私「わかんないな。あんまり違わないのかもしれない」
+:::
 
+::: voice-father
 お父さん「仮にがん種の違いは、復職率に直接効いてこないとするでしょ。そして、結腸がんだとあまりストーマを増設しないとしたらどうだろう。C→Eの関係はあるけど、C→Dの関係はないってことになる。このDAGによるとがん種は共通原因じゃないから、調整しなくてもいいってことになる」
+:::
 
-**私「なるほど、その仮定が正しいならそうね」**
+::: voice-daughter
+私「なるほど、その仮定が正しいならそうね」
+:::
 
+::: voice-father
 お父さん「以前みせてもらった集計では、ストーマ保有者は、非保有者に比べて、平均年齢が低くて、女性が多かった」
+:::
 
-**私「そうだよ」**
+::: voice-daughter
+私「そうだよ」
+:::
 
+::: voice-father
 お父さん「きっと、60歳を超えると定年の方が多くなるだろうし、男性の方が復職を希望しているんじゃない？こう考えると、年齢・性別は、ストーマ造設と復職率の両方に関連していて、共通原因と考えてよさそうだよね。だから年齢・性別はロジスティック回帰で調整すべきなんだけど、あのときはデータが足りず、モデルが不安だった。つまり、実際の解析では、調整する変数を絞っていかないとうまくいかない」
+:::
 
-**私「ああ、あのときはそういう思考回路だったのね。お父さんがなにを考えていたか理解できた気がする」**
+::: voice-daughter
+私「ああ、あのときはそういう思考回路だったのね。お父さんがなにを考えていたか理解できた気がする」
+:::
 
 ## ランダム化臨床試験の第3の因子はどうする？
 
+::: voice-father
 お父さん「この考え方はランダム化臨床試験でも応用できる。JCOG9912っていう臨床試験の論文を読んだことがあったよね（Sasako, et al. 2006）。あれは、手術方法（TH群またはLTA群）を比較して全生存期間に差があるかを調べた研究だった」
+:::
 
-**私「うん。だけど、ランダム化しているから第3の因子ってないんじゃない？だってTH群とLTA群をランダムに割付けてるもの」**
+::: voice-daughter
+私「うん。だけど、ランダム化しているから第3の因子ってないんじゃない？だってTH群とLTA群をランダムに割付けてるもの」
+:::
 
+::: voice-father
 お父さん「正解。でも、この試験ではハザード比を求めるとき、腫瘍径やBorrman分類などがんの進行度を表す変数で調整している。使ったのはロジスティック回帰じゃなくてCox回帰だけどね。」
+:::
 
-**私「そうなのか。じゃあ調整した方がいいのかな、さっきの"共通原因だけ調整"の話と矛盾するけど」**
+::: voice-daughter
+私「そうなのか。じゃあ調整した方がいいのかな、さっきの"共通原因だけ調整"の話と矛盾するけど」
+:::
 
+::: voice-father
 お父さん「ここでもDAGを使って考えられる。Eを手術方法、Dを全生存期間、Cを腫瘍径とすると、図はこうなる。試験結果では有意な関連はなかったけど、わかりやすいようにE→Dの矢印は残したよ」
+:::
 
 ![](causal-inference-1-2.png)
 
-**私「やっぱり共通原因ではないね」**
 
+::: voice-daughter
+私「やっぱり共通原因ではないね」
+:::
+
+::: voice-father
 お父さん「そう。JCOG9912では、腫瘍径は交絡因子ではないから、調整する必要はなかった。でも、Cox回帰によって全生存期間をモデル化するとしたらどうかな。腫瘍径のような癌の進行度をモデルに入れたくならない？」
+:::
 
-**私「それは入れたくなる。腫瘍径だけじゃなくてリンパ節転移とか、残存腫瘍の有無とかもモデル化したくなる」**
+::: voice-daughter
+私「それは入れたくなる。腫瘍径だけじゃなくてリンパ節転移とか、残存腫瘍の有無とかもモデル化したくなる」
+:::
 
+::: voice-father
 お父さん「この図の場合、Cは交絡因子じゃないから、調整しなくてもバイアスは生じない。でも、真に近いモデルを当てはめて、ハザード比の推定精度を高めるという観点からは、Cを調整してもいいんだ」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+
+
+
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 この2つのDAGの解釈として正しいのはどれでしょうか。
 
@@ -235,64 +302,17 @@ a:hover {
 ![](causal-inference-1-4.png)
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は1です**
 
 どちらも中間媒介因子ですが、上の図では、E→Dという直接の因果関係がありますよね。下の図でも、EはCに作用し、CはDに作用する関係があります。つまり因果関係はないというのは言い過ぎで、間接的な因果関係があるという解釈が正解になります。
 :::
 
-### Continuation of their story
+### エピソード、用語集
 
-[Study design I](study-design-1.qmd)
+- [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
+- [Common Causes and Confounders](causal-inference-2.html)
+- [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
+- [Backdoor Paths and Confounders](causal-inference-4.html)
 
-[Study design II](study-design-2.qmd)
-
-[Study design III](study-design-3.qmd)
-
-[Study design IV](study-design-4.qmd)
-
-[Study design V](study-design-5.qmd)
-
-[Frequentist thinking I](frequentist-1.qmd)
-
-[Frequentist thinking II](frequentist-2.qmd)
-
-[Frequentist thinking III](frequentist-3.qmd)
-
-[Frequentist thinking IV](frequentist-4.qmd)
-
-[Frequentist thinking V](frequentist-5.qmd)
-
-[Effects and time I](effects-1.qmd)
-
-[Effects and time II](effects-2.qmd)
-
-[Effects and time III](effects-3.qmd)
-
-[Effects and time IV](effects-4.qmd)
-
-[Effects and time V](effects-5.qmd)
-
-[Adjusting for bias I](logistic-regression-1.qmd)
-
-[Adjusting for bias II](logistic-regression-2.qmd)
-
-[Adjusting for bias III](logistic-regression-3.qmd)
-
-[Adjusting for bias IV](logistic-regression-4.qmd)
-
-[Causal inference I](causal-inference-1.qmd)
-
-[Causal inference II](causal-inference-2.qmd)
-
-[Causal inference III](causal-inference-3.qmd)
-
-[Causal inference IV](causal-inference-4.qmd)
-
-[The Craft of research I](publish-a-paper-1.qmd)
-
-[The Craft of research II](publish-a-paper-2.qmd)
-
-[The Craft of research III](publish-a-paper-3.qmd)
-
-[The Craft of research IV](publish-a-paper-4.qmd)
+- [Statistical Terms in Plain Language](glossary.html)
