--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -271,7 +271,7 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 | 原因から結果までの無向パス（合流点1つ以上を含む） | 合流点でブロックされる | (1)すべての合流点のみを調整するとブロックが解けてしまうが、(2)調整していない合流点があるとブロックされ、(3)非合流点を調整してもブロックされる |
 :::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 このDAGの解釈として正しいのはどちらでしょうか。
 
@@ -281,16 +281,16 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 ![](causal-inference-3-6)
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
-**正解は1です。**
+
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
+- **正解は1です。**
 
 このDAGは、$\mathrm{Pr}(E|C)$と$\mathrm{Pr}(D|C)$を意味しています。そのため、どう変形しても、EとDの同時確率を$\mathrm{Pr}(E)\mathrm{Pr}(D)$という積の形で表すことができません。つまり、EとDを結ぶ直接の矢印はないにもかかわらず、EとDは相関しています。
 
 別の回で扱ったコーヒーとすい臓がんの例で、喫煙によって見かけの相関が生じていたことを覚えていますか？喫煙は、上のDAGにおけるC（共通原因）に相当します。
 :::
 
-::: callout-note
-<img src="https://www.notion.so/icons/help-alternate_blue.svg" alt="https://www.notion.so/icons/help-alternate_blue.svg" width="40px"/> **もうひとつクイズです**
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 ピロリ菌と胃がんの因果関係を表すDAGをもう一度示します。このDAGにおいて、交絡因子として調整すべき変数の集合として正しいのは、次のうちどれでしょうか。
 
@@ -302,66 +302,21 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 ![](causal-inference-3-7)
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
-**正解は4です。**
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
+- **正解は4です。**
 
 このDAGは、上のクイズで扱ったDAGにパスE→Dを加えたものなので、調整すべき交絡因子は同じです。そして、先ほど考えたように、Cは合流点でもあり、共通原因でもあります。したがって、Aだけ、Bだけ、AとBだけを調整すると、パスE←C→Dによる疑似相関が残ってしまいます。さらに、Cは合流点なので、調整するとパスE←A→C←B→Dによる相関が生じてしまいます。
 
 結論をいうと、パスE←A→C←B→Dをブロックするため、Cに加えて、AまたはBを調整する必要があります。
 :::
 
-### Continuation of their story
 
-[Study design I](study-design-1.qmd)
 
-[Study design II](study-design-2.qmd)
+### エピソード、用語集
 
-[Study design III](study-design-3.qmd)
+- [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
+- [Common Causes and Confounders](causal-inference-2.html)
+- [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
+- [Backdoor Paths and Confounders](causal-inference-4.html)
 
-[Study design IV](study-design-4.qmd)
-
-[Study design V](study-design-5.qmd)
-
-[Frequentist thinking I](frequentist-1.qmd)
-
-[Frequentist thinking II](frequentist-2.qmd)
-
-[Frequentist thinking III](frequentist-3.qmd)
-
-[Frequentist thinking IV](frequentist-4.qmd)
-
-[Frequentist thinking V](frequentist-5.qmd)
-
-[Effects and time I](effects-1.qmd)
-
-[Effects and time II](effects-2.qmd)
-
-[Effects and time III](effects-3.qmd)
-
-[Effects and time IV](effects-4.qmd)
-
-[Effects and time V](effects-5.qmd)
-
-[Adjusting for bias I](logistic-regression-1.qmd)
-
-[Adjusting for bias II](logistic-regression-2.qmd)
-
-[Adjusting for bias III](logistic-regression-3.qmd)
-
-[Adjusting for bias IV](logistic-regression-4.qmd)
-
-[Causal inference I](causal-inference-1.qmd)
-
-[Causal inference II](causal-inference-2.qmd)
-
-[Causal inference III](causal-inference-3.qmd)
-
-[Causal inference IV](causal-inference-4.qmd)
-
-[The Craft of research I](publish-a-paper-1.qmd)
-
-[The Craft of research II](publish-a-paper-2.qmd)
-
-[The Craft of research III](publish-a-paper-3.qmd)
-
-[The Craft of research IV](publish-a-paper-4.qmd)
+- [Statistical Terms in Plain Language](glossary.html)
