--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Risk Ratios and Odds Ratios: When Approximation Works"
+title: "When Odds Ratios Approximate Risk Ratios—and When They Fail"
 format:
   html:
     toc: true
@@ -148,7 +148,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Effects and Time IV − Risk Ratios and Odds Ratios: When Approximation Works
+# Effects and Time IV − When Odds Ratios Approximate Risk Ratios—and When They Fail
 
 ::: {.serif-block .text-right}
 Keywords: binary outcome, effect measure
@@ -293,8 +293,8 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 
 - [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.html)
-- [Collapsibility of Effect Measures in Marginal and Stratified Tables](effects-3.html)
-- [Risk Ratios and Odds Ratios: When Approximation Works](effects-4.html)
+- [Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R](effects-3.html)
+- [When Odds Ratios Approximate Risk Ratios—and When They Fail](effects-4.html)
 - [From Risk and Rate to Survival and Hazard](effects-5.html)
 - [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example](effects-6.html)
 
